--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <h1>World Wide Web General</h1>
-    <p>The World Wide Web is based on these three technologies:
-        <ol>
-            <li><strong>H</strong>yper-<strong>T</strong>ext-<strong>T</strong>ransfer-<strong>P</strong>rotocol (HTTP)</li>
-            <li><strong>H</strong>yper<strong>t</strong>ext-<strong>M</strong>arkup-<strong>L</strong>anguage (HTML)</li>
-            <li><strong>U</strong>niform-<strong>R</strong>esource-<strong>I</strong>dentifier (URI)</li>
-        </ol>
-    </p>
+    <ol>
+        <li>
+            <p class="main_list">The World Wide Web is based on these three technologies:</p>
+            <ul>
+                <li><strong>H</strong>yper-<strong>T</strong>ext-<strong>T</strong>ransfer-<strong>P</strong>rotocol (HTTP)</li>
+                <li><strong>H</strong>yper<strong>t</strong>ext-<strong>M</strong>arkup-<strong>L</strong>anguage (HTML)</li>
+                <li><strong>U</strong>niform-<strong>R</strong>esource-<strong>I</strong>dentifier (URI)</li>
+            </ul>
+        </li>
+    </ol>
 </body>
 </html>
